# snake-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
shaders/: triangle.frag  triangle.vert
src/: main.rs  shaders.rs
